v 0.8, fixed the scrollbar plus title to images

--- a/design/deco.css
+++ b/design/deco.css
@@ -34,9 +34,6 @@ BODY{
     margin: 0 auto;
     width: 100%;
     height: auto;
-    overflow: scroll;
-    overflow-x: scroll;
-    overflow-y: hidden;
     text-align: center;
     float: right;
 }
